# uni-cex-api

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PROMPTS.md  README.md  RULES  TODO  TODO.md  docker-compose.yaml  funding_time.md  okx_docs_order_book_trading_market_data.md  okx_docs_order_book_trading_trade.md  okx_docs_public_data.md  okx_docs_trading_account.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: ci.yml  pypi.yml
docs/: conf.py  index.rst
docs/source/: conf.py
examples/: pump_dump_screener_example.py
tests/: __init__.py  auth_examples.py  binance_example.py  bybit_example.py  clients_test.py  compare_classes_test.py  decimals_test.py  deco_test.py  ex_t.py  exchange_info_test.py  extra_test.py  funding_info_test.py  funding_interval_test.py  funding_nxt_time_test.py  generate_links_test.py  logging_test.py  open_interest_test.py  orderbook_test.py  ticker_daily_test.py  uni_client.py  uni_client_test.py  uni_websocket_manager.py  uni_websocket_manager_test.py  user_websocket.py  websocket_manager.py  ws_test.py
tests/_archive/: README.md
tests/_template/: __init__.py  adapter.py  exchange_info.py  uni_client.py  uni_websocket_manager.py
tests/aster/: _order_check.py  _private_check.py  _public_check.py  _spot_check.py  client_test.py  exchange_info_test.py  uni_client_test.py  uni_websocket_manager_test.py  user_ws_test.py  websocket_manager_test.py
tests/binance/: __init__.py  (+13 more)
unicex/: __init__.py  enums.py  exceptions.py  extra.py  mapper.py  types.py  utils.py
(+250 files in other folders)
