[project]
name = "uni-cex-api"
version = "0.1.0"
description = "Unified Crypto Exchange API "
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "orjson>=3.11.3",
    "requests>=2.32.5",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
